commit sidebar setup + loader updates

--- a/satsquare/src/app/globals.css
+++ b/satsquare/src/app/globals.css
@@ -133,3 +133,17 @@ h1 {
   font-weight: 600;
   border-radius: 5px;
 }
+
+
+@keyframes spin-slow {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
+.animate-spin-slow {
+  animation: spin-slow 2s linear infinite;
+}
