--- a/satsquare/src/components/Sidebar/Sidebar.module.css
+++ b/satsquare/src/components/Sidebar/Sidebar.module.css
@@ -34,13 +34,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 0.4s;
+}
+.iconMiddle {
+
+    margin: 6px 0;
+    color: white;
+    font-size: 24px;
+    /* Adjust icon size */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s;
+    padding: 12px;
 }
 
-.icon:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+.iconMiddle:hover, .active {
+    background-color: #352B5B;
     /* Slight hover effect */
     border-radius: 50%;
-    padding: 10px;
+    padding: 12px;
+}
+.icon:hover{
+    background-color: #352B5B;
+    /* Slight hover effect */
+    border-radius: 50%;
+    padding: 12px;
 }
 
 @media (max-width: 768px) {
