--- a/satsquare/src/components/Sidebar/Sidebar.module.css
+++ b/satsquare/src/components/Sidebar/Sidebar.module.css
@@ -1,7 +1,6 @@
-/* components/Sidebar.module.css */
 
 .sidebar {
-    height: 100vh;
+    min-height: 100vh;
     width: 60px;
     background: linear-gradient(180deg, #2a00d4, #269ed4);
     display: flex;
