fixed seeder and auth roles

--- a/satsquare/src/app/globals.css
+++ b/satsquare/src/app/globals.css
@@ -159,3 +159,7 @@ h1 {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) #19ce6a !important;
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
+
+input {
+  color: #232229 !important;
+}
